--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,10 +34,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/TexttileShop
 excludes=
 file.reference.flatlaf-3.5.1.jar=lib\\flatlaf-3.5.1.jar
+file.reference.mysql-connector-j-8.4.0.jar=lib\\mysql-connector-j-8.4.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.flatlaf-3.5.1.jar}
+    ${file.reference.flatlaf-3.5.1.jar}:\
+    ${file.reference.mysql-connector-j-8.4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
