--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,13 +33,45 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/TexttileShop
 excludes=
+file.reference.barbecue-1.5-beta1.jar=lib\\barbecue-1.5-beta1.jar
+file.reference.commons-beanutils-1.9.4.jar=lib\\commons-beanutils-1.9.4.jar
+file.reference.commons-collections-2.1.jar=lib\\commons-collections-2.1.jar
+file.reference.commons-collections4-4.4.jar=lib\\commons-collections4-4.4.jar
+file.reference.commons-digester-2.1.jar=lib\\commons-digester-2.1.jar
+file.reference.commons-logging-1.0.2.jar=lib\\commons-logging-1.0.2.jar
 file.reference.flatlaf-3.5.1.jar=lib\\flatlaf-3.5.1.jar
+file.reference.jackson-annotations-2.17.2.jar=lib\\jackson-annotations-2.17.2.jar
+file.reference.jackson-core-2.17.2.jar=lib\\jackson-core-2.17.2.jar
+file.reference.jackson-databind-2.17.2.jar=lib\\jackson-databind-2.17.2.jar
+file.reference.jackson-dataformat-xml-2.17.2.jar=lib\\jackson-dataformat-xml-2.17.2.jar
+file.reference.jasperreports-7.0.0.jar=lib\\jasperreports-7.0.0.jar
+file.reference.jasperreports-pdf-7.0.0.jar=lib\\jasperreports-pdf-7.0.0.jar
+file.reference.jsvg-1.4.0.jar=lib\\jsvg-1.4.0.jar
 file.reference.mysql-connector-j-8.4.0.jar=lib\\mysql-connector-j-8.4.0.jar
+file.reference.openpdf-1.4.2.jar=lib\\openpdf-1.4.2.jar
+file.reference.stax2-api-3.0.1.jar=lib\\stax2-api-3.0.1.jar
+file.reference.swing-toast-notifications-1.0.3.jar=lib\\swing-toast-notifications-1.0.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.flatlaf-3.5.1.jar}:\
-    ${file.reference.mysql-connector-j-8.4.0.jar}
+    ${file.reference.mysql-connector-j-8.4.0.jar}:\
+    ${file.reference.commons-beanutils-1.9.4.jar}:\
+    ${file.reference.commons-collections-2.1.jar}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.0.2.jar}:\
+    ${file.reference.jackson-annotations-2.17.2.jar}:\
+    ${file.reference.jackson-core-2.17.2.jar}:\
+    ${file.reference.jackson-databind-2.17.2.jar}:\
+    ${file.reference.jackson-dataformat-xml-2.17.2.jar}:\
+    ${file.reference.jasperreports-7.0.0.jar}:\
+    ${file.reference.jasperreports-pdf-7.0.0.jar}:\
+    ${file.reference.jsvg-1.4.0.jar}:\
+    ${file.reference.openpdf-1.4.2.jar}:\
+    ${file.reference.stax2-api-3.0.1.jar}:\
+    ${file.reference.swing-toast-notifications-1.0.3.jar}:\
+    ${file.reference.barbecue-1.5-beta1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
